# NESTIS

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.db.yml  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml
backend/: .python-version  Dockerfile  alembic.ini  initial_data.py  pre_start.py  prestart.sh  pyproject.toml  uwsgi.ini
backend/app/: __init__.py
backend/app/api/: readme.md
backend/app/api/routes/: readme.md
backend/app/core/: app.py  config.py  db.py  readme.md  security.py
backend/app/crud/: readme.md
backend/app/models/: readme.md
backend/scripts/: readme.md
frontend/: Dockerfile  example.env  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  routeTree.gen.ts  theme.jsx
frontend/src/assets/: styles.scss
frontend/src/assets/styles/: global_style.scss  style_home.scss  style_login.scss  style_registro.scss  stylesLogin.scss
frontend/src/client/: readme.md
frontend/src/components/: GlobalLayout.jsx  Header.jsx  Login.jsx  readme.md
frontend/src/pages/: About.jsx  Login.jsx  Register.jsx
frontend/src/routes/: __root.jsx  about.lazy.jsx  index.lazy.jsx  login.lazy.jsx  readme.md  registro.lazy.jsx
