[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["German Rinaldi <110374480+ger-rinaldi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^23.0.0"
flask = "^3.0.3"
pydantic = "^2.8.2"
alembic = "^1.13.2"
sqlalchemy = "^2.0.32"
sqlmodel = "^0.0.22"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
email-validator = "^2.2.0"
passlib = "^1.7.4"
psycopg = "^3.2.1"
pydantic-settings = "^2.4.0"
flask-pydantic = "^0.12.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylama = "^8.4.1"
isort = "^5.13.2"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.black]
include = '\.pyi?$'
exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist

      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data
    )/'''
